# atsae54p20a-rs

./: .gitignore  ATSAME54P20A.svd  Cargo.toml  README.md  update.sh
.cargo/: config
boards/pfza_proto1/: Cargo.toml
hal/: Cargo.toml
hal/src/: lib.rs
hal/src/common/: gpio.rs  prelude.rs
