[package]
name = "atsame-hal"
version = "0.7.4"
authors = ["Wez Furlong <wez@wezfurlong.org>", "Paul Sajna <sajattack@gmail.com>", "Michael van Niekerk <mvniekerk@gmail.com>"]
description = "HAL and Peripheral access API for ATSAMD54 microcontrollers"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvniekerk/atsame"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/atsamd21_hal/"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
paste = "~0.1"
bitfield = "~0.13"
vcell = "~0.1"
rand_core = "~0.5"

[dependencies.jlink_rtt]
optional = true
version = "~0.1"

[dependencies.void]
default-features = false
version = "~1.0"

# Each of the supported chips is listed as an optional dependency here.
# This makes it available when the corresponding feature name is referenced.
# We use a feature named "sameFOO" to pull in the dependency named "atsameFOO"
[dependencies.atsame54p20a]
path = "../pac/atsame54p20a"
version = "~0.6"
optional = true

[dependencies.usb-device]
version = "~0.2"
optional = true

[dev-dependencies]
panic_rtt = "~0.1"
panic-abort = "~0.3"
panic-semihosting = "~0.5"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"

[features]
# This section lists our feature name to dependency mapping.  This are separated
# out so that the board support crates can reference a single feature name to
# select the appropriate chip, and to keep that separate from the dependency name
# for the `rt` feature below, which has to list out all possible optional deps.
# If we simply used feature names that matched the dependency names, enabling the
# rt feature would link all possible parts in and cause a linker error due to
# the high degree of similar symbols present in the various parts.
same54 = [] # Convenience feature for shared configuration of same54 chips
same54p20a = ["atsame54p20a"]
same54p20a-rt = ["atsame54p20a", "atsame54p20a/rt"]
unproven = ["embedded-hal/unproven"]
use_rtt = ["jlink_rtt"]
use_uart_debug = []
usb = ["usb-device"]
