[package]
name = "pfza_proto1"
version = "0.0.0"
authors = ["Michael van Niekerk <mvniekerk@gmail.com>"]
description = "Board Support crate for the PathfinderZA Proto1"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsame52p20a/pfza_proto1/"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsame-hal]
path = "../../hal"
version = "~0.7"
default-features = false

[dev-dependencies]
panic-halt = "~0.2"
panic-semihosting = "~0.5"
panic_rtt = "~0.2"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "~0.4"
smart-leds = "~0.1"
smart-leds-trait = "~0.1"

[dev-dependencies.ws2812-timer-delay]
version = "~0.1"
features = ["slow"]

[features]
# ask the HAL to enable atsame54p20a support
default = ["rt", "atsame-hal/same54p20a", "atsame-hal/same54"]
rt = ["cortex-m-rt", "atsame-hal/same54p20a-rt"]
unproven = ["atsame-hal/unproven"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = false
opt-level = "s"
